tests/pp-fail/flect_define2.fl.0.exp
Error: flect_define2.fl(1,9): Definition identifiers cannot start with 'Flect_'
\define Flect_Foo
        ^         
